--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HTML Lab of Doom</title>
+  <title>HTML Lab of Doom and Vibecoding</title>
   <style>
     body {
       margin: 0;
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-  <h1>My Little HTML Lab</h1>
+  <h1>HTML Lab of Vibecoding and Randomness</h1></h1>
 
   <ul>
     <li><a href="counter.html">Counter</a></li>
