--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
   <ul>
     <li><a href="counter.html">Counter</a></li>
+    <li><a href="javamax.html">Java Max Number</a></li>
     <li><a href="rickroll.html">Rickroll</a></li>
   </ul>
 
