--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       font-family: system-ui, -apple-system, sans-serif;
       background: #121212;
       color: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     h1 {
@@ -24,7 +27,7 @@
       list-style: none;
       padding: 0;
       max-width: 600px;
-      margin: 0 auto;
+      margin: 0 auto 2rem auto;
     }
 
     li {
@@ -46,17 +49,28 @@
       display: block;
       font-size: 1.2rem;
     }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+      margin-top: auto;
+    }
   </style>
 </head>
 <body>
 
-  <h1>HTML Lab of Vibecoding and Randomness</h1></h1>
+  <h1>HTML Lab of Vibecoding and Randomness</h1>
 
   <ul>
     <li><a href="counter.html">Counter</a></li>
     <li><a href="javamax.html">Java Max Number</a></li>
     <li><a href="rickroll.html">Rickroll</a></li>
   </ul>
+
+  <footer>
+    Created by Inventor7777 on a whim, powered by ChatGPT lol
+  </footer>
 
 </body>
 </html>
