--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HTML Lab of Doom and Vibecoding</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      padding: 2rem;
+      padding: 0;
+      height: 100%;
       font-family: system-ui, -apple-system, sans-serif;
       background: #121212;
       color: #f0f0f0;
+    }
+
+    body {
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
+    }
+
+    main {
+      flex: 1;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     h1 {
@@ -27,7 +38,7 @@
       list-style: none;
       padding: 0;
       max-width: 600px;
-      margin: 0 auto 2rem auto;
+      width: 100%;
     }
 
     li {
@@ -54,19 +65,21 @@
       text-align: center;
       font-size: 0.9rem;
       color: #888;
-      margin-top: auto;
+      padding: 1rem;
     }
   </style>
 </head>
 <body>
 
-  <h1>HTML Lab of Vibecoding and Randomness</h1>
+  <main>
+    <h1>HTML Lab of Vibecoding and Randomness</h1>
 
-  <ul>
-    <li><a href="counter.html">Counter</a></li>
-    <li><a href="javamax.html">Java Max Number</a></li>
-    <li><a href="rickroll.html">Rickroll</a></li>
-  </ul>
+    <ul>
+      <li><a href="counter.html">Counter</a></li>
+      <li><a href="javamax.html">Java Max Number</a></li>
+      <li><a href="rickroll.html">Rickroll</a></li>
+    </ul>
+  </main>
 
   <footer>
     Created by Inventor7777 on a whim, powered by ChatGPT lol
