--- a/index.html
+++ b/index.html
@@ -5,40 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HTML Lab of Doom and Vibecoding</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      height: 100%;
+      padding: 2rem;
       font-family: system-ui, -apple-system, sans-serif;
       background: #121212;
       color: #f0f0f0;
     }
 
-    body {
-      display: flex;
-      flex-direction: column;
-    }
-
-    main {
-      flex: 1;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
     h1 {
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 0.5rem;
       font-size: 2rem;
       color: #00bfff;
+    }
+
+    .blurb {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #aaa;
+      margin-bottom: 2rem;
     }
 
     ul {
       list-style: none;
       padding: 0;
       max-width: 600px;
-      width: 100%;
+      margin: 0 auto;
     }
 
     li {
@@ -60,30 +53,18 @@
       display: block;
       font-size: 1.2rem;
     }
-
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #888;
-      padding: 1rem;
-    }
   </style>
 </head>
 <body>
 
-  <main>
-    <h1>HTML Lab of Vibecoding and Randomness</h1>
+  <h1>HTML Lab of Vibecoding and Randomness</h1>
+  <div class="blurb">Created by Inventor7777 on a whim, powered by ChatGPT lol</div>
 
-    <ul>
-      <li><a href="counter.html">Counter</a></li>
-      <li><a href="javamax.html">Java Max Number</a></li>
-      <li><a href="rickroll.html">Rickroll</a></li>
-    </ul>
-  </main>
-
-  <footer>
-    Created by Inventor7777 on a whim, powered by ChatGPT lol
-  </footer>
+  <ul>
+    <li><a href="counter.html">Counter</a></li>
+    <li><a href="javamax.html">Java Max Number</a></li>
+    <li><a href="rickroll.html">Rickroll</a></li>
+  </ul>
 
 </body>
 </html>
