Fix video source paths in button.html

--- a/button.html
+++ b/button.html
@@ -54,7 +54,7 @@ video {
 
 <div id="container">
     <video id="rick" playsinline>
-        <source src="/rick/rick.mov" type="video/mov">
+        <source src="rick.mp4" type="video/mp4">
     </video>
 
     <div id="error">
