Update link for 204 page to new directory

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <ul>
     <li><a href="counter.html">Counter</a></li>
     <li><a href="javamax.html">Java Max Number</a></li>
-    <li><a href="204.html">204</a></li>
+    <li><a href="204/204.html">204</a></li>
     <li><a href="button.html">Rickroll</a></li>
   </ul>
 
