--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <li><a href="counter.html">Counter</a></li>
     <li><a href="javamax.html">Java Max Number</a></li>
     <li><a href="204/204.html">204</a></li>
-    <li><a href="button.html">Rickroll</a></li>
+    <li><a href="button/button.html">Rickroll</a></li>
   </ul>
 
 </body>
