Modify blurb to link to ChatGPT page
Updated the blurb section to include a link to ChatGPT.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       margin-bottom: 2rem;
     }
 
+    .blurb a {
+      color: #888;
+      text-decoration: underline;
+    }
+
     ul {
       list-style: none;
       padding: 0;
@@ -58,7 +63,9 @@
 <body>
 
   <h1>HTML Lab of Vibecoding and Randomness</h1>
-  <div class="blurb">Created by Inventor7777 on a whim, powered by ChatGPT lol</div>
+  <div class="blurb">
+    Created by Inventor7777 on a whim, powered by <a href="chatgpt.html">ChatGPT lol</a>
+  </div>
 
   <ul>
     <li><a href="counter.html">Counter</a></li>
