--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       font-family: system-ui, -apple-system, sans-serif;
       background: #121212;
       color: #f0f0f0;
+      opacity: 0;
+      animation: fadeIn 1.5s ease-in-out 0.5s forwards;
+    }
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
 
     h1 {
